Added in last graph and made some edits

--- a/index.qmd
+++ b/index.qmd
@@ -146,18 +146,21 @@ Pereira and Mousinho da Silveira"
 ```
 
 
+@fig-higher-ed-interest reveals a trend where students who expressed interest in pursuing higher education had a higher final grade, as seen by the increased median. 
+
 ```{r}
-#| label: fig-higher-ed-interest-g3
+#| label: fig-higher-ed-interest
 #| fig-cap: Differences in final grade based on interest in higher pursuing higher education
 #| fig-width: 5
 #| message: false
 ggplot(edu_achievement, aes(x = higher, y = G3, fill = higher)) +
+  geom_jitter() +
   geom_boxplot(alpha=0.7) +
   labs(
-    title = "Relationship Between Higher Education Interest and Final Grade",
+    title = "Relationship Between Higher Ed Interest and Final Grade",
     x = "Intent to Pursue Higher Education",
     y = "Final Grade") +
-  theme_minimal(base_size = 14) +
+  theme_minimal(base_size = 10) +
   theme(legend.position = "none")
 ```
 
