--- a/index.qmd
+++ b/index.qmd
@@ -60,7 +60,7 @@ ggplot(edu_achievement, aes(x = G3)) +
   theme_minimal()
 ```
 
-After reviewing plots for each predictor variable, we observed that the following variables showed some correlation with final grade performance: interest in higher education, number of past class failures, alcohol consumption, study time, and parent education level.
+After reviewing plots for each predictor variable, we observed that the following variables showed some correlation with final grade performance: interest in higher education, number of past class failures, study time, and parent education level.
 
 @fig-g3-failures displays how the typical final grade, depicted as the median, decreases as the number of past class failures increases.
 ```{r}
@@ -121,7 +121,7 @@ edu_achievement |>
 ```
 
 
-@fig-medu displays how there is a variable trend of student performance in regards to parent education level. The median final grade for students whose parent has no education is higher than the rest, but there are only a few points of data, making the pattern difficult to generalize.
+@fig-medu displays how there is a variable trend of student performance in regards to parent education level. The median final grade for students whose parent has no education is higher than the rest, but there are only a few points of data, making the pattern difficult to generalize. For the most part, however, there is little pattern.
 ```{r}
 #| label: fig-medu
 #| fig-cap: Differences in medians of students' final grades with different parent education level. Parent education level is defined as "0 = none, 1 = primary, 2 = 5th–9th grade, 3 = secondary, 4 = higher."
